sending of messages works, and updating of usre details in registration table in the database works

--- a/my.cnf
+++ b/my.cnf
@@ -1,6 +1,6 @@
 [client]
-database = radius
-host = localhost
-user = radius
-password = radius@kccr$1957
+database = raddb
+host = 192.168.56.130
+user = raduser
+password = radpass
 default-character-set = utf8
